// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Description Label 1`] = `
<div
  id="root"
>
  <div
    class="MuiBox-root css-1yuhvjn"
  >
    <span
      class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
    >
      Description Label
    </span>
  </div>
</div>
`;

exports[`Storyshots Card Feature Label 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root MuiTypography-body1 makeStyles-featureLabel css-1ezega9-MuiTypography-root"
  >
    Feature Label
  </span>
</div>
`;

exports[`Storyshots Card Header 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-150084s-MuiTypography-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover makeStyles-mainLink css-1emptwe-MuiTypography-root-MuiLink-root"
            href="/apps/123"
          >
            Flatcar
          </a>
        </h2>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1yq8yj7"
        >
          <p
            arial-label="group-id"
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
          >
            a cardTrack
          </p>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
          >
            Card Header description
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      CardHeader children
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
  />
</div>
`;

exports[`Storyshots Card Header With Card Id 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 makeStyles-cardTitle css-1ezega9-MuiTypography-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1yq8yj7"
        >
          <p
            arial-label="group-id"
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
          >
            a cardId
          </p>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
          >
            Card Header With cardId description
          </span>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
  />
</div>
`;

exports[`Storyshots Card Header With Card Track 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 makeStyles-cardTitle css-1ezega9-MuiTypography-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1yq8yj7"
        >
          <p
            arial-label="group-id"
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
          >
            a cardTrack
          </p>
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
          >
            Card Header With cardTrack description
          </span>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
  />
</div>
`;

exports[`Storyshots Card Header With Children 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 makeStyles-cardTitle css-1ezega9-MuiTypography-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1yq8yj7"
        >
          <p
            arial-label="group-id"
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
          >
            Card Header With Children description
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      CardHeader children
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
  />
</div>
`;

exports[`Storyshots Card Header With Description 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 makeStyles-cardTitle css-1ezega9-MuiTypography-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1yq8yj7"
        >
          <p
            arial-label="group-id"
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
          >
            Card Header description
          </span>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
  />
</div>
`;

exports[`Storyshots Card Header With Link 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-150084s-MuiTypography-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover makeStyles-mainLink css-1emptwe-MuiTypography-root-MuiLink-root"
            href="/apps/123"
          >
            Flatcar
          </a>
        </h2>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1yq8yj7"
        >
          <p
            arial-label="group-id"
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-1yuhvjn"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
          >
            Card Header With Link description
          </span>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
  />
</div>
`;

exports[`Storyshots Card Label 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root MuiTypography-body1 makeStyles-label makeStyles-label css-1ezega9-MuiTypography-root"
  >
    Label
  </span>
</div>
`;

exports[`Storyshots Card Label With Styles 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root MuiTypography-body1 makeStyles-label makeStyles-label css-1ezega9-MuiTypography-root"
  >
    Label
  </span>
</div>
`;
